third_party/rust/pin-project/tests/ui/pin_project/override-priv-mod.stderr
error[E0119]: conflicting implementations of trait `SMustNotImplDrop` for type `S`
  --> tests/ui/pin_project/override-priv-mod.rs:14:1
   |
14 | #[pin_project] //~ ERROR conflicting implementations of trait `_::FooMustNotImplDrop`
   | ^^^^^^^^^^^^^^
   | |
   | first implementation here
   | conflicting implementation for `S`
   |
   = note: this error originates in the derive macro `::pin_project::__private::__PinProjectInternalDerive` (in Nightly builds, run with -Z macro-backtrace for more info)
